hw2: setup ast structure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,11 @@
         "*.tcc": "cpp",
         "cstdint": "cpp",
         "type_traits": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "tokendata.hpp": "c",
+        "flags.hpp": "c",
+        "vector": "cpp"
     }
 }
