hw2: setup ast const

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "ostream": "cpp",
         "tokendata.hpp": "c",
         "flags.hpp": "c",
-        "vector": "cpp"
+        "vector": "cpp",
+        "variant": "cpp"
     }
 }
