hw2: passing 20/20 tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,49 @@
 {
     "files.associations": {
-        "string": "cpp",
-        "stdexcept": "cpp",
         "iostream": "cpp",
+        "exception": "cpp",
+        "new": "cpp",
+        "stdexcept": "cpp",
+        "type_traits": "cpp",
+        "typeinfo": "cpp",
+        "tree.h": "c",
+        "string.h": "c",
+        "memory": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
         "cmath": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "limits": "cpp",
         "*.tcc": "cpp",
         "cstdint": "cpp",
-        "type_traits": "cpp",
-        "typeinfo": "cpp",
-        "new": "cpp",
+        "map": "cpp",
+        "optional": "cpp",
+        "variant": "cpp",
         "ostream": "cpp",
-        "tokendata.hpp": "c",
-        "flags.hpp": "c",
-        "vector": "cpp",
-        "variant": "cpp"
-    }
+        "array": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "set": "cpp",
+        "unordered_map": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "iosfwd": "cpp",
+        "istream": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "utility": "cpp",
+        "chrono": "cpp",
+        "codecvt": "cpp",
+        "ctime": "cpp",
+        "iomanip": "cpp",
+        "ratio": "cpp",
+        "string_view": "cpp",
+        "algorithm": "cpp",
+        "TokenData.hpp": "c",
+    },
 }
