hw3: add emit and further progress on semantic analyzer

--- a/hw3/makefile
+++ b/hw3/makefile
@@ -2,8 +2,8 @@ BIN = c-
 CC = g++ -std=c++17 -g
 
 SRCS = $(BIN).y $(BIN).l
-CC_SRCS = Tree/*.cpp Flags.cpp Semantics.cpp SymTable.cpp ourgetopt/ourgetopt.cpp
-HDRS = TokenData.hpp Tree/*.hpp Flags.hpp Semantics.hpp SymTable.hpp ourgetopt/ourgetopt.h
+CC_SRCS = *.cpp Tree/*.cpp ourgetopt/ourgetopt.cpp
+HDRS = *.hpp Tree/*.hpp ourgetopt/ourgetopt.h
 OBJS = lex.yy.o $(BIN).tab.o
 
 $(BIN) : $(OBJS)
