hw3: update makefile

--- a/hw3/src/makefile
+++ b/hw3/src/makefile
@@ -2,7 +2,7 @@ CC = g++ -std=c++17 -g
 BIN = c-
 SRCS = $(BIN).y $(BIN).l
 CPPS = */*.cpp */*/*.cpp
-HPPS = */*.hpp */*/*.hpp
+HPPS = *.hpp */*.hpp */*/*.hpp
 OBJS = lex.yy.o $(BIN).tab.o
 
 $(BIN) : $(OBJS)
