hw7: 121/160 tests; 6962 diff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,8 @@
         "string_view": "cpp",
         "algorithm": "cpp",
         "TokenData.hpp": "c",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "deque": "cpp",
+        "functional": "cpp"
     },
 }
